--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
     <div class="container searchContainer">
         <div class="search card card-body">
             <h1>Who is the artist?</h1>
-            <p class="lead">Enter an artist of your choice...</p>
-            <input type="text" id="searchUser" class="form-control" placeholder="Bob Marley">  
+            <p class="lead">Enter an artist of your choice:</p>
+            <input type="text" id="searchArtist" class="form-control" placeholder="...">  
         </div>
         <br>
-        <button type="button" class="btn btn-info btn-lg">Find Artist</button>
+        <button type="button" class="btn btn-info btn-lg" id="findButton">Find Artist</button>
         <br>
         <div id="profile"></div>
     </div>
     <footer class="mt-5 p-3 text-center bg-light">
         420 Enterprise &copy;
     </footer>
+
+    <script src="happi.js"></script>
+    <script src="app.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
