Adding the favourite artist html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <button type="button" class="btn btn-info btn-lg" id="findButton">Find Artist</button>
         <br><br>
         <div id="artists" class="card card-body"></div>
+        <br>
+        <button type="button" class="btn btn-info btn-lg" id="findButton">Add Artist</button>
+        <br><br>
+        <div class="artistsContainer searchContainer">
+            <div class="chosenArtists card card-body">
+                <h3>Favourite Artists</h3>
+                <p class="lead">Choose 5 of your favourite artists</p>
+                <div class="card card-body" id="artistsResult"></div>
+            </div>
+        </div>
     </div>
     <footer class="mt-5 p-3 text-center bg-light">
         420 Enterprise &copy;
