Ul for selected artists and clear task button where added Generate a new html for the actual game

--- a/index.html
+++ b/index.html
@@ -23,14 +23,25 @@
         <br><br>
         <div id="artists" class="card card-body"></div>
         <br>
-        <button type="button" class="btn btn-info btn-lg" id="findButton">Add Artist</button>
+        <button type="button" class="btn btn-info btn-lg" id="addButton">Add Artist</button>
         <br><br>
         <div class="artistsContainer searchContainer">
             <div class="chosenArtists card card-body">
                 <h3>Favourite Artists</h3>
                 <p class="lead">Choose 5 of your favourite artists</p>
-                <div class="card card-body" id="artistsResult"></div>
+                <div class="card card-body" id="artistsResult">
+                    <ul class="collection"></ul>
+                </div>
+                <br>
+                <button class="btn btn-info btn-lg" id="clearButton">Clear Artist/s</button>
             </div>
+            <br>
+            <div class="startGame card card-body">
+                <h4>THE GAME</h4>
+                <p>After choosing 5 of your favourites artists, the game will display  some random lyrics of each artist. The pourpose of this is to assign each lyric to it's artist.</p>
+                <a href="game.html" class="btn btn-info btn-lg">Start Game</a>
+
+            <div>
         </div>
     </div>
     <footer class="mt-5 p-3 text-center bg-light">
